--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 * {
-  outline-style: solid;
-  outline-color: black;
+font-family: 'Shojumaru', cursive;
 }
 
-:root {
-  
+main {
+  font-size: small;
 }
 
 header {
-  font-family: 'Shojumaru', cursive;
+  
   font-size: x-large;
 }
 
@@ -18,8 +17,14 @@ header {
 }
 
 .island {
-  width: 50vh;
-  height: 50vh;
+  width: 55vh;
+  height: 55vh;
+  padding: 0;
+}
+
+.parrot {
+  width: 8vh;
+  height: 12vh;
 }
 
 .canon {
@@ -30,6 +35,11 @@ header {
 .pirate-maiden {
   width: 8vh;
   height: 12vh;
+}
+
+.pirate-ship {
+  width: 14vh;
+  height: 14vh;
 }
 
 .gold-coin {
