--- a/style.css
+++ b/style.css
@@ -11,15 +11,22 @@ header {
   font-size: x-large;
 }
 
-.gold-counter {
-  font-family: 'Shojumaru', cursive;
 
-}
 
 .island {
   width: 55vh;
   height: 55vh;
   padding: 0;
+}
+
+.island :active {
+  width: 45vh;
+  height: 45vh;
+}
+
+.island :hover {
+  width: 50vh;
+  height: 50vh;
 }
 
 .parrot {
