--- a/style.css
+++ b/style.css
@@ -17,16 +17,13 @@ header {
   width: 55vh;
   height: 55vh;
   padding: 0;
+  outline: none;
 }
 
-.island :active {
-  width: 45vh;
-  height: 45vh;
-}
-
-.island :hover {
+.island-button :active {
   width: 50vh;
   height: 50vh;
+  outline: none !important;
 }
 
 .parrot {
