--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ footer {
   height: 12vh;
 }
 
+.bg-grey {
+  background-color: rgb(228, 224, 224);
+}
+
 .scrolling {
   overflow: hidden;
   height: 57vh;
@@ -36,6 +40,7 @@ footer {
 .parrot {
   width: 8vh;
   height: 12vh;
+  padding: 1px;
 }
 
 .hat {
@@ -44,8 +49,9 @@ footer {
 }
 
 .canon {
-  width: 12vh;
-  height: 8vh;
+  width: 14vh;
+  height: 10vh;
+  padding: 5px;
 }
 
 .pirate-maiden {
@@ -61,6 +67,10 @@ footer {
 .gold-coin {
   width: 10vh;
   height: 10vh;
+}
+
+.shoppe-font {
+  font-size: x-small;
 }
 
 .hidden {
