--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ footer {
 }
 
 .shoppe-row {
-  height: 75px;
+  height: 13vh;
   display: flex;
   align-items: center;
   justify-content: center;
